# cDTO

./: .gitmodules  MessageDefinitionBNF.md  README.md  build.sbt
example/: CMakeLists.txt  github_issues.cdto  github_issues.cdto.c  github_issues.cdto.h  github_issues.cdto.json.c  github_issues.cdto.json.h  issues.json  main.c
src/main/scala/cdto/: Main.scala
src/main/scala/codegen/: Constants.scala
src/main/scala/codegen/functions/: FunctionDefinition.scala  FunctionGenerator.scala
src/main/scala/codegen/json/: MessageJSONFiles.scala
src/main/scala/codegen/messagetypes/: ArrayFieldFreeFunction.scala  MessageFreeFunction.scala  MessageInitFunction.scala  MessageStruct.scala  MessageTypeFiles.scala
src/main/scala/codegen/sourcefile/: CFile.scala  HeaderFile.scala  SourceFile.scala  StructDefinitionOrder.scala
src/main/scala/codegen/types/: ArrayFieldFreeFunction.scala  InitFunctionDefinition.scala  MessageFreeFunction.scala  MessageInitFunction.scala  StructDefinition.scala  (+1 more)
src/main/scala/compiler/: CompilerError.scala  Constants.scala  FieldDefinitionAnalyzer.scala  MessageDefinitionAnalyzer.scala  MessageFieldDefinitionAnalyzer.scala  ProtocolAST.scala  ProtocolCompiler.scala  ProtocolDefinitionAnalyzer.scala  ProtocolParser.scala
src/main/scala/datamodel/: Protocol.scala
src/test/scala/: UnitSpec.scala
src/test/scala/compiler/: FieldDefinitionAnalyzerSpec.scala  MessageDefinitionAnalyzerSpec.scala  MessageFieldDefinitionAnalyzerSpec.scala  ParserSpec.scala  ProtocolCompilerSpec.scala  ProtocolDefinitionAnalyzerSpec.scala  ProtocolParserSpec.scala
(+25 files in other folders)
